tests/ui/mismatch_fn_ptr_param.stderr
error: invalid function call
   --> mismatch_fn_ptr_param.ray:12:5
    |
 LL |     f(g)
    |     ^^^^ `f` expected 2 args, found 1

